[package]
name = "vimbo"
version = "0.1.0"
edition = "2024"
description = "Terminal Vim cheatsheet and searchable helper built with ratatui."
license = "MIT"
repository = "https://github.com/rmfaheem/vimbo"
homepage = "https://github.com/rmfaheem/vimbo"
documentation = "https://github.com/rmfaheem/vimbo#readme"
readme = "README.md"
keywords = ["vim", "cheatsheet", "terminal", "tui", "reference"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Faheem"]

[dependencies]
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
